--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               ? `<button class="bg-green-600 hover:bg-green-700 text-white px-3 py-1 rounded" onclick="terminarPedido(${index})">Terminar</button>`
               : ''
           }
-          <button class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded" onclick="descargarPDF(${index})">Descargar PDF</button>
+          <button class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded" onclick="descargarPDF(${index})">Descargar remito</button>
           <button class="bg-gray-400 hover:bg-gray-500 text-white px-3 py-1 rounded" onclick="eliminarPedido(${index})">Eliminar</button>
         </div>
       `;
@@ -285,3 +285,4 @@
 
 </body>
 </html>
+
