--- a/index.html
+++ b/index.html
@@ -127,11 +127,24 @@ const productosBase = [
   { nombre: "Aritos de colores bolsa x1,5kg", precio: 5255.65 },
   { nombre: "Bolitas de chocolate bolsa x1,5kg", precio: 6153.66 },
   { nombre: "Aritos de colores 14x150g", precio: 619.05 },
-  { nombre: "Bolitas de chocolate 14x150g", precio: 648.53 }
+  { nombre: "Bolitas de chocolate 14x150g", precio: 648.53 },
+  { nombre: "Mani recubierto saborizado 1kg", precio: 5000 },
+  { nombre: "Mix cuyano 1kg", precio: 13000 },
+  { nombre: "Mix tropical 1kg", precio: 13000 },
+  { nombre: "Mix seco 1kg", precio: 15000 },
+  { nombre: "Mix mediterraneo 1kg", precio: 19000 },
+  { nombre: "Nuez mariposa 1kg", precio: 18000 },
+  { nombre: "Almohaditas 1kg", precio: 6000 },
+  { nombre: "Almohaditas 2,5kg", precio: 13300 },
+  { nombre: "Arandanos 1kg", precio: 15000 },
+  { nombre: "Copos azucarados 1kg", precio: 4500 },
+  { nombre: "Copos azucarados 3,4kg", precio: 13000 },
+  { nombre: "Copos sin azucar 1kg", precio: 4500 },
+  { nombre: "Copos sin azucar 3kg", precio: 10500 },
 ];
 
 /* ------------------- CONFIG ------------------- */
-const porcentajes = [35, 49, 15, 25, 10];
+const porcentajes = [35, 49, 15, 25, 10, 7];
 
 const nuevoPedidoBtn = document.getElementById('nuevoPedidoBtn');
 const formulario = document.getElementById('formulario');
@@ -373,16 +386,18 @@ window.descargarPDF = (index) => {
   doc.setFillColor(250, 250, 250);
   doc.rect(0, 0, 420, 80, "F");
 
-  doc.setTextColor(200, 0, 0);
-  doc.setFontSize(18);
-  doc.text("GM-DISTRIBUCIONES", 30, 35);
+  doc.setTextColor(0, 0, 0);
+  doc.setFontSize(20);
+  doc.text("JULICROC", 30, 30);
+  doc.setFontSize(13);
+  doc.text("GM-DISTRIBUCIONES", 30, 43);
   doc.setFontSize(12);
-  doc.text("Flavio Giulioni", 30, 50);
+  doc.text("Flavio Giulioni", 30, 55);
   doc.setFontSize(10);
   doc.text("gmdistribuciones3@gmail.com", 30, 65);
   doc.text("CUIT: 20-25804000-8  |  +54 3425014152", 30, 78);
 
-  doc.setTextColor(200, 0, 0);
+  doc.setTextColor(0, 0, 0);
   doc.setFontSize(12);
   doc.text(`Remito N° ${pedido.numero}`, 300, 35);
   doc.text(`Fecha: ${pedido.fecha}`, 300, 50);
