--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@ const productosBase = [
   { nombre: "Aritos de colores 14x150g", precio: 619.05 },
   { nombre: "Bolitas de chocolate 14x150g", precio: 648.53 },
   { nombre: "Mani recubierto saborizado 1kg", precio: 5000 },
-  { nombre: "Mix cuyano 1kg", precio: 13000 },
+  { nombre: "Mix cuyano 1kg", precio: 14000 },
   { nombre: "Mix tropical 1kg", precio: 13000 },
-  { nombre: "Mix seco 1kg", precio: 15000 },
-  { nombre: "Mix mediterraneo 1kg", precio: 19000 },
-  { nombre: "Nuez mariposa 1kg", precio: 18000 },
+  { nombre: "Mix seco 1kg", precio: 16000 },
+  { nombre: "Mix mediterraneo 1kg", precio: 20000 },
+  { nombre: "Nuez mariposa 1kg", precio: 19000 },
   { nombre: "Almohaditas 1kg", precio: 6000 },
   { nombre: "Almohaditas 2,5kg", precio: 13300 },
   { nombre: "Arandanos 1kg", precio: 15000 },
+  { nombre: "Almendras 1kg", precio: 20000 },
   { nombre: "Copos azucarados 1kg", precio: 4500 },
   { nombre: "Copos azucarados 3,4kg", precio: 13000 },
   { nombre: "Copos sin azucar 1kg", precio: 4500 },
@@ -516,3 +517,4 @@ renderPedidos();
 
 </body>
 </html>
+
